update ui trang chu

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -166,40 +166,36 @@
                 </div>
                 
                 <div class="inf-giasu">
-                <th:block th:each="taikhoan:${taikhoan}">
-                		<p></p>
-                
                     <div class="gia-su">
                         <a href="#"><img src="/img/user1.png"></a>
-                        <p class="name-gia-su">[[${taikhoan.hoTen}]]</p>
-                        <p class="address">[[${taikhoan.tinhThanh.tenTinh}]] | Toán, Tiếng anh</p>
-                        <p class="mo-ta">[[${taikhoan.moTa}]] </p>
-                        <button href="#" class="btn-md">Mời dạy</button>
+                        <p class="name-gia-su">Phan Văn Lương</p>
+                        <p class="address">Đà Nẵng | Thành viên của nhóm</p>
+                        <p class="mo-ta">Sinh viên khoa CNTT Đại học Duy Tân</p>
+                        <button href="#" class="btn-md"></button>
                     </div>
-				</th:block>
-                    <!-- <div class="gia-su">
+                    <div class="gia-su">
                         <a href="#"><img src="/img/user1.png"></a>
                         <p class="name-gia-su">Đặng Văn Thịnh</p>
-                        <p class="address">Hà Nội | Toán, Tiếng anh</p>
-                        <p class="mo-ta">Thủ khoa ĐH Duy Tân về lãnh vực toán học và Ielts 8.0 </p>
-                        <button href="#" class="btn-md">Mời dạy</button>
+                        <p class="address">Đà Nẵng | Thành viên của nhóm</p>
+                        <p class="mo-ta">Sinh viên khoa CNTT Đại học Duy Tân</p>
+                        <button href="#" class="btn-md"></button>
                     </div>
 
                     <div class="gia-su">
                         <a href="#"><img src="/img/user1.png"></a>
                         <p class="name-gia-su">Nguyễn Minh Tân</p>
-                        <p class="address">Hà Nội | Toán, Tiếng anh</p>
-                        <p class="mo-ta">Thủ khoa ĐH Duy Tân về lãnh vực toán học và Ielts 8.0 </p>
-                        <button href="#" class="btn-md">Mời dạy</button>
+                        <p class="address">Quản Ngãi | Thành viên của nhóm</p>
+                        <p class="mo-ta">Sinh viên khoa CNTT Đại học Duy Tân</p>
+                        <button href="#" class="btn-md"></button>
                     </div>
 
                     <div class="gia-su">
                         <a href="#"><img src="/img/user1.png"></a>
                         <p class="name-gia-su">Mai Thu Trang</p>
-                        <p class="address">Hà Nội | Toán, Tiếng anh</p>
-                        <p class="mo-ta">Thủ khoa ĐH Duy Tân về lãnh vực toán học và Ielts 8.0 </p>
-                        <button href="#" class="btn-md">Mời dạy</button>
-                    </div> -->
+                        <p class="address">Quảng Ngãi | Thành viên của nhóm</p>
+                        <p class="mo-ta">Sinh viên khoa CNTT Đại học Duy Tân</p>
+                        <button href="#" class="btn-md"></button>
+                    </div>
                     <a href="#" class="see-more"> Xem thêm </a>
                 </div>
                 
