--- a/src/main/resources/templates/web/dk-gia-su.html
+++ b/src/main/resources/templates/web/dk-gia-su.html
@@ -288,12 +288,15 @@
                     </div>
                     <div class="input-dkgs">
                         <input type="text" id="mota" placeholder="Mô tả bản thân(*)">
+                        <p id="vali-mota" style="color: red; display: none; margin-bottom: -10px;">Yêu cầu không để trống!</p>
                     </div>
                     <div class="input-dkgs">
                         <input type="text" id="bangcap" placeholder="Bằng cấp(*)">
+                        <p id="vali-bangcap" style="color: red; display: none; margin-bottom: -10px;">Yêu cầu không để trống!</p>
                     </div>
                     <div class="input-dkgs">
                         <input type="text" id="socmnd" placeholder="Số chứng minh nhân dân(*)">
+                        <p id="vali-socmnd" style="color: red; display: none; margin-bottom: -10px;">Yêu cầu không để trống!</p>
                     </div>
                     <div class="input-dkgs">
                         <input class="btn-dkgs" type="button" id="dangky-giasu" value="Đăng ký">
