--- a/src/main/resources/templates/web/trangchu.html
+++ b/src/main/resources/templates/web/trangchu.html
@@ -44,16 +44,17 @@
                         class="suluachon">
                         <h2>Các tiện ích</h2>
                         <div class="luachon">
-                            <a class="option" href="/taikhoan/trangcanhan"> Xem Thông tin cá nhân </a>
+                            <a class="option1" href="/ruttien">Rút tiền</a>
                         </div>
                         <div class="luachon">
-                            <a class="option1" href="/hienthilichlop">Lớp học</a>
+                            <a class="option1" href="/naptien">Nạp tiền</a>
                         </div>
+                        
                         <div class="luachon">
                             <a class="option3" href="/dangkitrothanhgiasu">Trở thành Gia sư</a>
                         </div>
                         <div class="luachon">
-                            <a class="option1" href="#">Nạp tiền</a>
+                            <a class="option1" href="/hienthilichlop">Lớp học</a>
                         </div>
                     </div>
                 </div>
