done lich su giao dich , fix xu ly tien

--- a/src/main/resources/templates/web/up-giao-trinh.html
+++ b/src/main/resources/templates/web/up-giao-trinh.html
@@ -105,15 +105,10 @@
                             <div style="width: 100%;" class="col-md-1">
                                 <label for="">TIÊU ĐỀ</label>
                                 <span class="teacher-alert">*</span><br>
-                                <input type="text" name="tieuDe">
+                                <input type="text" name="tieuDe" title="Please enter your First Name" required="">
                             </div>
                     
-                            <div style="width: 100%;" class="col-md-1">
-                                <label for="hannap">CHỦ ĐỀ</label>
-                                <span class="teacher-alert">*</span><br>
-                                <input type="text" id="" name="Chủ đề">
-                                
-                            </div>
+                            
 
                             <div style="width: 100%;" class="col-md-1">
                                 <label for="">NHẬP NỘI DUNG GIÁO TRÌNH</label>
