--- a/src/main/resources/templates/web/upbaikt.html
+++ b/src/main/resources/templates/web/upbaikt.html
@@ -45,12 +45,12 @@
 
 							<div style="width: 100%;" class="col-md-1">
 								<label for="">TIÊU ĐỀ</label> <span class="teacher-alert">*</span><br>
-								<input type="text" name="tieuDe">
+								<input type="text" name="tieuDe" title="Please enter your First Name" required="">
 							</div>
 
 							<div style="width: 100%;" class="col-md-1">
 								<label for="hannap">HẠN NẠP</label> <span class="teacher-alert">*</span><br>
-								<input type="datetime-local" id="hannap" name="date">
+								<input type="datetime-local" id="hannap" name="date" title="Please enter your First Name" required="">
 
 							</div>
 
