format tiền , tim kiem ...

--- a/src/main/resources/templates/reset_password_form.html
+++ b/src/main/resources/templates/reset_password_form.html
@@ -9,12 +9,12 @@
 <div class="border border-secondary rounded p-3">
     <div>
         <p>
-            <input type="password" name="password" id="password" class="form-control"
-                placeholder="Enter your new password" required autofocus />
+            <input type="password" name="password" id="edit-pass" class="form-control"
+                  title="Please enter your First Name" required=""/>
         </p>         
         <p>
-            <input type="password" class="form-control" placeholder="Confirm your new password"
-                required oninput="checkPasswordMatch(this);" />
+            <input type="password" class="form-control" placeholder="Confirm your new password" id="edit-re-pass"
+                 title="Please enter your First Name" required=""/>
         </p>         
         <p class="text-center">
             <input type="submit" value="Change Password" class="btn btn-primary" />
@@ -31,3 +31,18 @@ function checkPasswordMatch(fieldConfirmPassword) {
     }
 }
 </script>
+<script>
+				var password = document.getElementById("edit-pass")
+					  , confirm_password = document.getElementById("edit-re-pass");
+		
+				function validatePassword(){
+					  if(password.value != confirm_password.value) {
+						confirm_password.setCustomValidity("Mật khẩu nhập lại không khớp!");
+					  } else {
+						confirm_password.setCustomValidity('');
+					  }
+				}
+		
+				password.onchange = validatePassword;
+				confirm_password.onkeyup = validatePassword;
+			</script>
