--- a/src/main/resources/templates/web/timkiem.html
+++ b/src/main/resources/templates/web/timkiem.html
@@ -52,64 +52,9 @@
               </div>
                      <div class="danh-sach-gia-su">
                         <div class="inf-giasu">
-                            <div  class="gia-su">
-                                   <a href="#"><img src="/img/user1.png"></a>
-                                   <p class="name-gia-su">Phạm Thị Như Quỳnh</p>
-                                   <p class="address">Hà Nội | Toán, Tiếng anh</p>
-                                   <p class="mo-ta">Thủ khoa ĐH Duy Tân về lãnh vực toán học và Ielts 800 điểm </p>
-                                   <button href="#" class="btn-md">Mời dạy</button>
-                            </div>
-                            <div  class="gia-su">
-                                <a href="#"><img src="/img/user1.png"></a>
-                                <p class="name-gia-su">Phạm Thị Như Quỳnh</p>
-                                <p class="address">Hà Nội | Toán, Tiếng anh</p>
-                                <p class="mo-ta">Thủ khoa ĐH Duy Tân về lãnh vực toán học và Ielts 800 điểm </p>
-                                <button href="#" class="btn-md">Mời dạy</button>
-                         </div>
-                         <div  class="gia-su">
-                            <a href="#"><img src="/img/user1.png"></a>
-                            <p class="name-gia-su">Phạm Thị Như Quỳnh</p>
-                            <p class="address">Hà Nội | Toán, Tiếng anh</p>
-                            <p class="mo-ta">Thủ khoa ĐH Duy Tân về lãnh vực toán học và Ielts 800 điểm </p>
-                            <button href="#" class="btn-md">Mời dạy</button>
+                        	
+                            <script src="/js/web/taikhoan/hienthitim.js"></script>
                             
-                     </div>
-                     <div  class="gia-su">
-                        <a href="#"><img src="/img/user1.png"></a>
-                        <p class="name-gia-su">Phạm Thị Như Quỳnh</p>
-                        <p class="address">Hà Nội | Toán, Tiếng anh</p>
-                        <p class="mo-ta">Thủ khoa ĐH Duy Tân về lãnh vực toán học và Ielts 800 điểm </p>
-                        <button href="#" class="btn-md">Mời dạy</button>
-                 </div>
-                 <div  class="gia-su">
-                    <a href="#"><img src="/img/user1.png"></a>
-                    <p class="name-gia-su">Phạm Thị Như Quỳnh</p>
-                    <p class="address">Hà Nội | Toán, Tiếng anh</p>
-                    <p class="mo-ta">Thủ khoa ĐH Duy Tân về lãnh vực toán học và Ielts 800 điểm </p>
-                    <button href="#" class="btn-md">Mời dạy</button>
-             </div>
-             <div  class="gia-su">
-                 <a href="#"><img src="/img/user1.png"></a>
-                 <p class="name-gia-su">Phạm Thị Như Quỳnh</p>
-                 <p class="address">Hà Nội | Toán, Tiếng anh</p>
-                 <p class="mo-ta">Thủ khoa ĐH Duy Tân về lãnh vực toán học và Ielts 800 điểm </p>
-                 <button href="#" class="btn-md">Mời dạy</button>
-          </div>
-          <div  class="gia-su">
-             <a href="#"><img src="/img/user1.png"></a>
-             <p class="name-gia-su">Phạm Thị Như Quỳnh</p>
-             <p class="address">Hà Nội | Toán, Tiếng anh</p>
-             <p class="mo-ta">Thủ khoa ĐH Duy Tân về lãnh vực toán học và Ielts 800 điểm </p>
-             <button href="#" class="btn-md">Mời dạy</button>
-             
-      </div>
-      <div  class="gia-su">
-         <a href="#"><img src="/img/user1.png"></a>
-         <p class="name-gia-su">Phạm Thị Như Quỳnh</p>
-         <p class="address">Hà Nội | Toán, Tiếng anh</p>
-         <p class="mo-ta">Thủ khoa ĐH Duy Tân về lãnh vực toán học và Ielts 800 điểm </p>
-         <button href="#" class="btn-md">Mời dạy</button>
-  </div>
                  
                 
                     </div>
