--- a/src/main/resources/templates/admin/qlbaidang.html
+++ b/src/main/resources/templates/admin/qlbaidang.html
@@ -38,7 +38,7 @@
 </head>
 <body class="sb-nav-fixed">
 	<nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-		<a class="navbar-brand" href="index.html">DASUO</a>
+		<a class="navbar-brand" href="/admin">DASUO</a>
 		<button class="btn btn-link btn-sm order-1 order-lg-0"
 			id="sidebarToggle" href="#">
 			<i class="fas fa-bars"></i>
