--- a/src/main/resources/templates/admin/qlgiaodich.html
+++ b/src/main/resources/templates/admin/qlgiaodich.html
@@ -38,7 +38,7 @@
 </head>
 <body class="sb-nav-fixed">
 	<nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-		<a class="navbar-brand" href="index.html">DASUO</a>
+		<a class="navbar-brand" href="/admin">DASUO</a>
 		<button class="btn btn-link btn-sm order-1 order-lg-0"
 			id="sidebarToggle" href="#">
 			<i class="fas fa-bars"></i>
@@ -132,7 +132,7 @@
 										<th class="sorting" tabindex="0" aria-controls="dataTable"
 											rowspan="1" colspan="1"
 											aria-label="Position: activate to sort column ascending"
-											style="width: 151px;">ID tài khoản</th>
+											style="width: 151px;">Tên tài khoản</th>
 										<th class="sorting" tabindex="0" aria-controls="dataTable"
 											rowspan="1" colspan="1"
 											aria-label="Office: activate to sort column ascending"
