--- a/src/main/resources/templates/reset_password_form.html
+++ b/src/main/resources/templates/reset_password_form.html
@@ -13,7 +13,7 @@
                   title="Please enter your First Name" required=""/>
         </p>         
         <p>
-            <input type="password" class="form-control" placeholder="Confirm your new password" id="edit-re-pass"
+            <input type="password" name="repassword"class="form-control" placeholder="Confirm your new password" id="edit-re-pass"
                  title="Please enter your First Name" required=""/>
         </p>         
         <p class="text-center">
