--- a/src/main/resources/templates/web/doimatkhau.html
+++ b/src/main/resources/templates/web/doimatkhau.html
@@ -74,9 +74,9 @@
 											class="form-required" id="newpassword" title="This field is required.">*</span>
 										</label>
 										<!-- Chinh lai input chieu dai 60% -->
-										<input placeholder="Mật khẩu từ 6 đến 32 ký tự"
+										<input placeholder="Mật khẩu từ 8 đến 32 ký tự"
 											type="password" id="edit-pass" name="matKhauMoi" size="60"
-											maxlength="128" class="form-text required"
+											minlength="8" maxlength="32" class="form-text required"
 											title="Vui lòng nhập mật khẩu mới" required="">
 									</div>
 									<div class="form-item form-type-password form-item-re-pass">
