--- a/src/main/resources/templates/web/register.html
+++ b/src/main/resources/templates/web/register.html
@@ -73,7 +73,7 @@
 						placeholder="Số điện thoại (012 345 6789)" pattern="[0-9]{3}[0-9]{3}[0-9]{4}" id="sodienthoai">
 				</div>
 				<div class="form-control agileinfo">
-					<input type="password" class="lock" name="matKhau"
+					<input type="password" class="lock" name="matKhau" minlength="8"
 						placeholder="Mật khẩu" id="password1" required="">
 				</div>
 
