--- a/src/main/resources/templates/web/timkiem.html
+++ b/src/main/resources/templates/web/timkiem.html
@@ -9,16 +9,16 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <title>Document</title>
+    <title>Tìm Kiếm</title>
 </head>
 <body>
-    <div style="background-color: #f7f7f7;" class="wrapper">
+    <div style="background-color: #fdfdfd;" class="wrapper">
         <div id="header">
             <script src="/js/web/components/header_web.js"></script>
         </div>
 
 
-        <section style="height: 1200px;" class="home-category">
+        <section style="height: 800px" class="home-category">
             <div class="container" style="padding-top:10px;">
                <div class="region region-content">
               <div id="block-system-main" class="block block-system">
@@ -39,26 +39,14 @@
           </div>
           </div></form>				</div>
                        
-                      <div class="view-user-page2-filter ">
-                          <p style="font-size:18px ;padding-bottom:0px; color: #505763;">
-                    Kết quả tìm kiếm giáo viên cho từ khóa: <strong><i>"toán"</i></strong>
-                  </p>
-                         
-                  <div style="padding: 0 0 10px;font-size: 16px; color: #970218;">
-                    Có 8499 kết quả
-                      
-                </div>        
+                      <div class="view-user-page2-filter">
+                                
                       </div>
               </div>
                      <div class="danh-sach-gia-su">
                         <div class="inf-giasu">
-                        	
                             <script src="/js/web/taikhoan/hienthitim.js"></script>
-                            
-                 
-                
-                    </div>
-                    
+                        </div>
                      </div> 
                      
       </div>
@@ -73,14 +61,6 @@
             </div>  
             <div style="margin-top: -100px;margin-bottom: 30px; text-align: center;" class="Pagination">
                 <div class="pagination">
-                    <a href="#">&laquo;</a>
-                    <a class="active" href="#">1</a>
-                    <a href="#">2</a>
-                    <a href="#">3</a>
-                    <a href="#">4</a>
-                    <a href="#">5</a>
-                    <a href="#">6</a>
-                    <a href="#">&raquo;</a>
                   </div>
             </div>
           </section>
